# words

./: StubTest.hs  words.cabal
.stack-work/install/x86_64-osx/lts-9.14/8.0.2/doc/words-0.1.0.0/: LICENSE
.stack-work/install/x86_64-osx/lts-9.14/8.0.2/flag-cache/: HUnit-1.5.0.0-DvjF79OHhCC7SzfeEty4OI  QuickCheck-2.9.2-LvlomhGMxrFBkX1zwiWpQu  ansi-terminal-0.6.3.1-3RTqikoQf47ajVD9m8zgB  async-2.1.1.1-8yywY4inVGRLJSCg60gBXj  call-stack-0.1.0-FYVrCPXGP9EGAuTW32963O  hspec-2.4.4-Ct0Af2AzisB8bPqGMHHFvj  hspec-core-2.4.4-Ezb0jq4rRfBJWZtpolvs1E  hspec-discover-2.4.4-99Suq6sFZ1T6o4isjc43TZ  hspec-expectations-0.8.2-DujBeQFEMmfJJRLad7XQgd  primitive-0.6.2.0-4578caNkWQ54Gt1mxLF2Yh  quickcheck-io-0.2.0-4pLO1WRxoBW9gt8EnME0zS  random-1.1-9tceXaeYIMZ4JrKq20Egog  setenv-0.1.1.3-8dEhk6JWvlmCmVyBammSpu  stm-2.4.4.1-JQn4hNPyYjP5m9AcbI88Ve  tf-random-0.5-CJZw1ZWS5MOJlR60HqKEZL  words-0.1.0.0-2BohWveyA5lK0ewgybZufq  words-0.1.0.0-CYI3KknegDpJL5eLhQz4hl  words-0.1.0.0-LISqhhIiZ4617lGqKY5VXc
.stack-work/install/x86_64-osx/lts-9.14/8.0.2/lib/x86_64-osx-ghc-8.0.2/: libHSwords-0.1.0.0-CYI3KknegDpJL5eLhQz4hl-ghc8.0.2.dylib  libHSwords-0.1.0.0-LISqhhIiZ4617lGqKY5VXc-ghc8.0.2.dylib
.stack-work/install/x86_64-osx/lts-9.14/8.0.2/lib/x86_64-osx-ghc-8.0.2/words-0.1.0.0-2BohWveyA5lK0ewgybZufq/: Data.dyn_hi  Data.hi  Lib.dyn_hi  Lib.hi
.stack-work/install/x86_64-osx/lts-9.14/8.0.2/pkgdb/: package.cache  words-0.1.0.0-2BohWveyA5lK0ewgybZufq.conf  words-0.1.0.0-CYI3KknegDpJL5eLhQz4hl.conf  words-0.1.0.0-LISqhhIiZ4617lGqKY5VXc.conf
app/: Main.hs
src/: Data.hs  Lib.hs
test/: Spec.hs
(+8 files in other folders)
