name:                words
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/jacqueline-homan/words#readme
license:             BSD3
license-file:        LICENSE
author:              Jacqueline S. Homan
maintainer:          jacqueline@theunixman.com
copyright:           BSD
category:            Example
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/jacqueline-homan/words#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Data
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable words
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , words
  default-language:    Haskell2010

test-suite words-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , words
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -dynamic
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jacqueline-homan/words
